<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/title_finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title_finalizar"
            android:textColor="@color/amarelo"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/text_revisar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_revisar"
            android:textColor="@color/amarelopastel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/title_finalizar"
            app:layout_constraintStart_toStartOf="@id/title_finalizar"
            app:layout_constraintTop_toBottomOf="@id/title_finalizar" />

        <TextView
            android:id="@+id/text_pagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/text_pagamento"
            android:textColor="@color/amarelopastel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/text_revisar"
            app:layout_constraintStart_toStartOf="@id/text_revisar"
            app:layout_constraintTop_toBottomOf="@id/text_revisar" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/text_pagamento"
            app:layout_constraintTop_toBottomOf="@id/text_pagamento">

            <RadioButton
                android:id="@+id/rd_dinheiro"
                android:text="@string/rd_dinheiro"
                android:textColor="@color/amarelopastel"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rd_pix"
                android:text="@string/rd_pix"
                android:textColor="@color/amarelopastel"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rd_cartao"
                android:text="@string/rd_cartao"
                android:textColor="@color/amarelopastel"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_concluir"
            style="@style/Button"
            android:text="@string/bt_finalizar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="370dp"
            app:layout_constraintTop_toBottomOf="@id/text_revisar"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>