<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormCardapio">

        <TextView
            android:id="@+id/title_cardapio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/title_cardapio"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/amarelo"
            android:textSize="55sp"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_cardapio"
            android:layout_width="345dp"
            android:layout_height="81dp"
            android:layout_marginTop="90dp"
            android:textAlignment="center"
            android:text="@string/text_cardapio"
            android:textColor="@color/amarelo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_cardapio" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_bebidas"
            style="@style/ButtonCardapio"
            android:text="@string/bt_bebidas"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cardapio"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_salgados"
            style="@style/ButtonCardapio"
            android:text="@string/title_salgados"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_bebidas"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>