<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logoperfil"
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:src="@drawable/perfil"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerbranco1"
        android:layout_marginTop="8dp"
        style="@style/ContainerComponentes"
        android:background="@color/marrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoperfil"
        />

    <TextView
        android:id="@+id/texto"
        android:textColor="@color/amarelo"
        android:text="@string/TelaInicial1"
        android:textStyle="bold"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco1"
        app:layout_constraintEnd_toEndOf="@id/containerbranco1"
        app:layout_constraintTop_toTopOf="@id/containerbranco1"
        />

    <View
        android:id="@+id/containerbranco"
        android:layout_marginTop="175dp"
        style="@style/ContainerFino"
        app:layout_constraintEnd_toStartOf="@id/containerbranco2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerbranco1"
        />

    <ImageView
        android:src="@drawable/menu"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/containerbranco"
        app:layout_constraintStart_toStartOf="@id/containerbranco"
        app:layout_constraintEnd_toEndOf="@id/containerbranco"
        />

    <TextView
        android:id="@+id/texto2"
        android:textColor="@color/amarelopastel"
        android:textStyle="bold"
        android:text="@string/TelaInicial2"
        android:layout_width="82dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco"
        app:layout_constraintEnd_toEndOf="@id/containerbranco"
        app:layout_constraintTop_toTopOf="@id/containerbranco"
        />

    <ImageView
        android:src="@drawable/cupom"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/containerbranco"
        app:layout_constraintStart_toStartOf="@id/containerbranco2"
        app:layout_constraintEnd_toEndOf="@id/containerbranco2"
        />

    <View
        android:id="@+id/containerbranco2"
        android:layout_marginTop="175dp"
        style="@style/ContainerFino"
        app:layout_constraintStart_toEndOf="@id/containerbranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerbranco1"
        />

    <TextView
        android:id="@+id/texto3"
        android:textColor="@color/amarelopastel"
        android:text="@string/TelaInicial3"
        android:textStyle="bold"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco2"
        app:layout_constraintEnd_toEndOf="@id/containerbranco2"
        app:layout_constraintTop_toTopOf="@id/containerbranco2"
        />

    <View
        android:id="@+id/containerbranco3"
        android:layout_marginTop="175dp"
        style="@style/ContainerFino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/containerbranco4"
        app:layout_constraintTop_toBottomOf="@id/containerbranco"

        />

    <TextView
        android:id="@+id/texto4"
        android:textColor="@color/amarelopastel"
        android:text="@string/TelaInicial4"
        android:textStyle="bold"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco3"
        app:layout_constraintEnd_toEndOf="@id/containerbranco3"
        app:layout_constraintTop_toTopOf="@id/containerbranco3"
        />

    <View
        android:id="@+id/containerbranco4"
        android:layout_marginTop="175dp"
        style="@style/ContainerFino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/containerbranco3"
        app:layout_constraintTop_toBottomOf="@id/containerbranco"
        />

    <TextView
        android:id="@+id/texto5"
        android:textColor="@color/amarelopastel"
        android:text="@string/TelaInicial5"
        android:textStyle="bold"
        android:layout_width="49dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco4"
        app:layout_constraintEnd_toEndOf="@id/containerbranco4"
        app:layout_constraintTop_toTopOf="@id/containerbranco4"
        />

    <View
        android:id="@+id/containerbranco5"
        android:layout_marginTop="25dp"
        style="@style/ContainerComponentes1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerbranco4"
        />

    <TextView
        android:id="@+id/texto6"
        android:textColor="@color/amarelopastel"
        android:text="@string/TelaInicial6"
        android:textStyle="bold"
        android:layout_width="88dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco5"
        app:layout_constraintEnd_toEndOf="@id/containerbranco5"
        app:layout_constraintTop_toTopOf="@id/containerbranco5"
        />

    <ImageView
        android:src="@drawable/eventos"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/containerbranco3"
        app:layout_constraintStart_toStartOf="@id/containerbranco3"
        app:layout_constraintEnd_toEndOf="@id/containerbranco3"
        />

    <ImageView
        android:src="@drawable/perfileditar"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/containerbranco3"
        app:layout_constraintStart_toStartOf="@id/containerbranco4"
        app:layout_constraintEnd_toEndOf="@id/containerbranco4"
        />

    <View
        android:id="@+id/containerbranco6"
        android:layout_marginTop="25dp"
        style="@style/ContainerComponentes1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerbranco5"
        />

    <TextView
        android:id="@+id/texto7"
        android:textColor="@color/amarelopastel"
        android:text="@string/TelaInicial7"
        android:textStyle="bold"
        android:layout_width="122dp"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/containerbranco6"
        app:layout_constraintEnd_toEndOf="@id/containerbranco6"
        app:layout_constraintTop_toTopOf="@id/containerbranco6"
        />

</androidx.constraintlayout.widget.ConstraintLayout>